3 Events kind of burned out

--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -894,16 +894,16 @@
   britain.30.b:0 "Empower the Englightened Imperialists"
 
   britain.31.t:0 "King Edward addresses the Nation"
-  britain.31.d:0 ""
+  britain.31.d:0 "'My Subjects both at home and abroad amongst the Empire; it is to my great shame that my goverment have been unable to solve the current crisis and with widespread violence alongside anarchy at the center of Empire; it has fallen upon me to dismiss the British goverment until such times that the British public can trust them once more to rule.\n\nI do not enjoy seizing power however Britain and the Empire needs a ruler, a ruler who can unite Britain and defend her in the bleakest of times much like the King Arthur of old who united Britannia and defended her from threats both abroad and within. With this pledge I promise you that I shall cut down all traitors and revolutionaries against Empire with my own Excalibur; the military.\n\nTherefore I ask you men of Britain, to give me patience of my rule so that I can make Britain a place fit for heroes which our current politicans cannot do; give me your support alongside my divine right from God to make Britain march on like we have for a thousand years, I say to you if the British Empire and her Federation was to last another thousand years and was to look back at this moment, they will say this was Britannia's defining hour for Britain lives and marches on  ."
   britain.31.a:0 "Britannia lives, and marches on!"
 
   britain.32.t:0 "The Rise of the Free Britain Movement"
-  britain.32.d:0 ""
-  britain.32.a:0 "Great change always comes with resistance."
+  britain.32.d:0 "Eric Athur Blair sat with John Boynton Priestley at the King's head, a pub on the outskirts of Norwich. Both John and Eric didn't originate from Norwich however it was one of the few cities in England which havn't been taken over completely by the military or taken up in the Royalist Patriotic fever.\n\nBoth knew why they were here; to join an underground movement known as the Free Britain Movement. The goal of the movement was to restore Britain’s ancient birth right; democracy back which had been overthrown by the Tyant Edward VIII.\n\nGeorge had been inspired by this change of events in Britain. A fanatical population being monitored by a military representing a tyrant who knows all. Eric or (George Orwell in the Author's world) had started on a book with these merits; one called 1984, a book to satire Britain but first thing's first he thought to himself.\n\nEric stood up and offered his hand to John Priestley, a fellow socialist author who would do good for the cause.\n\n'I would like you to join me and others on my crusade to free Britain, Mr Priestley. You have been waiting a good four hours showing your patience and your eyes tell me your willing.'Eric smiled to John as he spoke and smiled even harder when John shook his hand back."
+  britain.32.a:0 "Revolution always starts off small."
 
   britain.33.t:0 "FBM incites Passive Resistance to the Regime"
-  britain.33.d:0 ""
-  britain.33.a:0 "Damn!"
+  britain.33.d:0 "Edward looked down at the reports he had been getting from his military and administration. He couldn't believe his eyes at what was going on. A movement which was going traction known as Free Britain or the Free British movement had organised sit in's at goverment installations, refused to go to church and sing God save the King and burned the royal flag from time to time to show their resitance.\n\nCan't they see these fools that he was the only one holding the Kingdom and Empire together, that he was the saviour of England; Arthur reborn to unite the Realm.\n\nEdward could only stare with disappointment at the paper. These men were the same men who had made Britain go downhill, lazy, arrogant socialists who never knew the sacrifice of ruling. If they were to carry on like this then all the good Edward had done would of been for nought. The King could only sit there and pray to almighty God that his sacred crusade to make Britain better would not be ignored and crushed."
+  britain.33.a:0 "Keep calm your Majesty!"
 
   britain.34.t:0 "The British Revolution"
   britain.34.d:0 ""
