Russia now has starting ministers!

--- a/localisation/PB_Government_l_english.yml
+++ b/localisation/PB_Government_l_english.yml
@@ -337,6 +337,11 @@ PB_Keynesian_School:0 "Keynesian School"
 PB_Pilot:0 "Former Pilot"
 PB_Medical_Background:0 "Medical Background"
 PB_Communal_Economist:0 "Communal Economist"
+PB_Zealous_Nationalist:0 "Zealous Nationalist"
+PB_Bimetallism_Follower:0 "Bimetallism Follower"
+PB_Pan_Nationalist:0 "Pan Nationalist"
+PB_Race_Purist:0 "Race Purist"
+PB_Shock_Attack_Proponent:0 "Shock Attack Proponent"
 
 PB_Technocrats:0 "Technocrat"
 PB_Militarists:0 "Militarist"
