Germany and Pacific Germany Stuff
- Units
- Cities
- laws and policies for DAS
- localisation

--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -682,3 +682,16 @@
  GER_Empire_cn_ADJ:0 "German"
  GER_Empire_an_ADJ:0 "German"
 
+##########################
+  # LeaderDescriptions
+##########################
+
+POLITICS_KARL_DONITZ_DESC:0 ""The North German does not go in for extremes. He has broader horizons than the men from the mountains of Bavaria and Austria."\n\n§YBorn:§!16/9/1891\n\nKarl Dönitz earned his glory, in the Great War he served in the German Navy like no other sailor could show. He is efficient, ruthless and seems to feel not a bit of pressure. At the end of the war he became of Germany's Greatest War Heroes. He continued to serve in the Navy gaining prestige and ranks through his persistance on continuous development of Naval Technology and Doctrines. With his rising tensions in the recent years in the Pacific the now Admiral Dönitz was dispatched as Statthalter to the Pacific Commonwealth. There he hopefully shall root out rising internal resistance and shield the colonies from foreign aggression.\n\nHowever if we look under the facade of Admiral Dönitz we might learn more about what a man he truly is."
+
+##########################
+  # PlaceHolderLocalisationforGermanPuppets
+##########################
+
+DAS_prussian_admiral:0 "The Prussian Admiral"
+DAS_prussian_admiral_desc:0 "The Prussian Admiral"
+
