--- a/localisation/PB_state_names_l_english.yml
+++ b/localisation/PB_state_names_l_english.yml
@@ -667,7 +667,7 @@
  STATE_666:0 "Lappland"
  STATE_667:0 "Lesser Sunda Islands"
  STATE_668:0 "The Moluccas"
- STATE_669:1 "West Papua"
+ STATE_669:1 "Northern Papua"
  STATE_670:0 "Laos"
  STATE_671:0 "Annam"
  STATE_672:0 "Sumatra"
