--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -322,7 +322,9 @@
  VICTORY_POINTS_10237:0 "Balikpapan"
  VICTORY_POINTS_10263:0 "Makassar"
  VICTORY_POINTS_12268:0 "Palembang"
- VICTORY_POINTS_12371:0 "Hollandia"
+ VICTORY_POINTS_12371:0 "Franz Joseph Stadt"
+ VICTORY_POINTS_12154:0 "Madang"
+ VICTORY_POINTS_12315:0 "Manokwari"
  VICTORY_POINTS_7859:0 "Canberre"
  VICTORY_POINTS_7798:0 "Dutigalle"
  VICTORY_POINTS_12406:0 "Sydney"
@@ -487,7 +489,7 @@
  VICTORY_POINTS_7251:0 "Rabaul"
  VICTORY_POINTS_7302:0 "Suva"
  VICTORY_POINTS_12140:0 "Guam"
- VICTORY_POINTS_12237:0 "Lae"
+ VICTORY_POINTS_12237:0 "Rudolfstadt"
  VICTORY_POINTS_13021:0 "Tarawa"
  VICTORY_POINTS_13025:0 "Iwo Jima"
  VICTORY_POINTS_13028:0 "Yap"
