--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -380,10 +380,63 @@
   French_flavour.3.d:0 "The process of political eradication is no easy feat. Though victory can and has been acheived. Many Far-left and liberal based ideologies are becoming extinct, products of a bygone era. Popularity for the FPF is rising and even the conservatives are flocking to this so called Neo-imperialist ideology. The need for forceful conversion still remains fairly limited boosting our approval and recognition as the True Sons Of France. Not even the Anglos and Germans enjoy such political popularity, and they call themselves stable democracies, how laughable."
   French_flavour.3.a:0 "We Are The True Sons Of France"
 
+  French_flavour.4.t:0 "The Revolution Still Breathes"
+  French_flavour.4.d:0 ""
+  French_flavour.4.a:0 "Our Struggle Will last A Thousand Years More"
+
+  French_flavour.5.t:0 "Where Hides the Degenerate"
+  French_flavour.5.d:0 ""
+  French_flavour.5.a:0 "Inform The SP!"
+
+  French_flavour.6.t:0 "A Home for the Degenerate"
+  French_flavour.6.d:0 ""
+  French_flavour.6.a:0 "Home Sweet Home"
+
+  French_flavour.7.t:0 "A New Home for the Degenerate"
+  French_flavour.7.d:0 ""
+  French_flavour.7.a:0 "Home Sweet Home, Again"
+
+  French_flavour.8.t:0 "A Vain Hope for the Degenerate"
+  French_flavour.8.d:0 ""
+  French_flavour.8.a:0 "Maybe There Is A Chance"
+  
+  French_flavour.9.t:0 "The Degenerate Finds no Hope"
+  French_flavour.9.d:0 ""
+  French_flavour.9.a:0 "Time For A Shower"
+
+  French_flavour.10.t:0 "Kindess is the language of people"
+  French_flavour.10.d:0 ""
+  French_flavour.10.a:0 "In Times Of Great Madness, Humanity Still Stands Strong"
+
+  French_flavour.11.t:0 "France's Lost Son"
+  French_flavour.11.d:0 ""
+  French_flavour.11.a:0 "Where Are You?"
+
+  French_flavour.12.t:0 "At the Bottom"
+  French_flavour.12.d:0 ""
+  French_flavour.12.a:0 "Work For The State And The State Shall Work For You"
+
+  French_flavour.13.t:0 "The General"
+  French_flavour.13.d:0 ""
+  French_flavour.13.a:0 "Attention Solider"
+
+  French_flavour.14.t:0 "In the Middle"
+  French_flavour.14.d:0 ""
+  French_flavour.14.a:0 "Work For The State And The State Shall Work For You"
+
+  French_flavour.15.t:0 "At the Top"
+  French_flavour.15.d:0 ""
+  French_flavour.15.a:0 "Work For The State And The State Shall Work For You"
+
+  French_flavour.16.t:0 "A Country With No Tesla"
+  French_flavour.16.d:0 ""
+  French_flavour.16.a:0 "We Don't Need Foreigners"
+
   French_flavour.31.t:0 "The Italian Civil War"
   French_flavour.31.d:0 "Each cold breathe the minister gave between words only emphasized the unfortunate reality of the war. It was as if each breathe was a desperate please for assistance, directed to the garrison head near the upper savoy border for help, of any kind. The disciples of the ISRF would hang for crimes against the state if they were too loose the war and both the garrison head and minister knew this, though one was clearly on the short end of the stick. He didn't beg twice, his eyes did all the talking, and the message was very clear. The garrsion head lent back in his rickety chair and pondered for a moment."
   French_flavour.31.a:0 "Fine, Send Them More Guns"
   French_flavour.31.b:0 "We Can barely Afford Bread"
+
 
   ##########################
   # IDEAS
