Germany GFX and Land Modding
- you know the drill check the  files

--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -105,6 +105,7 @@
   # FOCUSES
   ##########################
   PB_GER_Rudolf_Crisis:0 "The Abdication Crisis"
+  PB_GER_New_Elections:0 "Elections"
 
   PB_GER_Red_Diachy:0 "The Red Diachy"
   PB_GER_Red_Diachy_desc:0 ""
