--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -137,6 +137,7 @@
  VICTORY_POINTS_3780:0 "Milan"
  VICTORY_POINTS_819:0 "Naples"
  VICTORY_POINTS_6626:0 "Triest"
+ VICTORY_POINTS_11735:0 "Pula"
  VICTORY_POINTS_6780:0 "Turin"
  VICTORY_POINTS_6788:0 "Genoa"
  VICTORY_POINTS_6606:0 "Bologna"
