--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -987,8 +987,12 @@
   PB_FRA_hunt_for_unions:0 "Hunt for Unions" 
   PB_FRA_Our_Promise_To_Keep:0 "Our Promise To Keep"
 
+  PB_FRA_Approaching_Corsica:0 "Approaching Corsica"
+
+  PB_FRA_The_Apurdi_Situation:0 "The Apurdi Situation"
+
   PB_FRA_the_new_european_system:0 "The New European System"
-  PB_FRA_the_new_european_system_desc:0 "\n\n\n\n\n\nHon"
+  PB_FRA_the_new_european_system_desc:0 "\n\n\n\n\n\n"
   PB_FRA_the_land_of_albion:0 "The Land of Albion"
   PB_FRA_invest_in_england:0 "Invest in England"
   PB_FRA_invest_in_wales:0 "Invest in Wales"
