--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -332,6 +332,14 @@
   PBNews.86.d:0 ""  
   PBNews.86.a:0 "France marches closer to Germany"
 
+  PBNews.87.t:0 "FRANCE DECLARES WAR ON GERMANY"
+  PBNews.87.d:0 ""  
+  PBNews.87.a:0 "The World Stands Still In Anticipation"
+
+  PBNews.88.t:0 "Germany Joins The IP"
+  PBNews.88.d:0 ""  
+  PBNews.88.a:0 "An Alliance Out Of Necessity?"
+
 
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
