German Naval Reworked
- Reworked the German Naval Branches
- Added two GFX into the Interface

--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -251,8 +251,14 @@
 
   PB_GER_Heydrich_Sea_Doctrine:0 "Heydrich's Carrier Programme"
   PB_GER_Heydrich_Sea_Doctrine_Power_Projection:0 "Power Projection"
-  PB_GER_Heydrich_Sea_Doctrine_Carrier_Training:0 "Improved Crew Training"
+  PB_GER_Heydrich_Sea_Doctrine_Carrier_Training:0 "Ruling the Seas and Skies"
   PB_GER_Heydrich_Sea_Doctrine_New_Carriers:0 "Advanced Carrier Models"
+  PB_GER_Heydrich_Sea_Doctrine_Newer_Carriers:0 "Modern Carriers"
+  PB_GER_Heydrich_Sea_Doctrine_Expand_Ferdinand:0 "Expand Ferdinandshaven"
+  PB_GER_Heydrich_Sea_Doctrine_Naval_Bombers:0 "Real Naval Bombers"
+  PB_GER_Heydrich_Sea_Doctrine_Newer_Naval_Bombers:0 "Bravest Pilots"
+  PB_GER_Heydrich_Sea_Doctrine_Striking_Doctrine:0 "How to Strike"
+  
 
   PB_GER_Support_Traditionalists:0 "Support the Traditionalisten"
 
@@ -260,6 +266,11 @@
   PB_GER_Raeder_Sea_Doctrine_Battlecruisers:0 "Battlecruiser Research"
   PB_GER_Raeder_Sea_Doctrine_Landing_Teams:0 "Expand the Sealion Teams"
   PB_GER_Raeder_Sea_Doctrine_Dockyard_Expansions:0 "Revive the High Seas Fleet Proposal"
+  PB_GER_Raeder_Sea_Doctrine_Guarding_Coasts:0 "Guarding the Coasts"
+  PB_GER_Raeder_Sea_Doctrine_Port_Expansion:0 "Expanding all Dockyard Facilities"
+  PB_GER_Raeder_Sea_Doctrine_Cruiser_Destroyer:0 "Modernize the Escort Ships"
+  PB_GER_Raeder_Sea_Doctrine_Excellent_Aiming:0 "The Best Sailors"
+  PB_GER_Raeder_Sea_Doctrine_High_Seas_Fleet:0 "Updating the Doctrines"
 
   PB_GER_Richthofen_Air_Doctrine:0 "Richthofen's Air Integrity Doctrine"
   PB_GER_Richthofen_Air_Doctrine_CAS:0 "Close Air Operations"
@@ -510,7 +521,7 @@
   germany.48.b:0 "For Gods Sake, just accept that you are Germans."
 
   germany.49.t:0 "The Czech Legion Falls"
-  germany.49.d:0 ""
+  germany.49.d:0 "The Troops started to enter the city in the morning hoping to catch the Seperatists by suprise. However it seems that information about the raid leaked and the Czechs had fortified their headquaters, ready to fight for their independence.\n\ After 3 Hours of exhausting city fighting the troops had to retreat. Casualties were high and the morale of the Czechs appeared to grow stronger. Seeing such heavy resistance, the government finally decided to show no more restraint in the matter. In the next hours special mortar teams, armored cars and even flamethrowers arrived on the scene. The Second Battle was over quickly with the complete destruction of the Czech Legions.\n\nWhile some elements of the Legion might have gone underground the leadership decided to fight until the bitter end. Josef Šnejdárek personally fought with his machine gun until he was burned alive by a Flammenwerfer Unit. Some politicians are already showing some kind of regret for this kind of bloody battle. Not out of sympathy but rather out of fear that we just elevated the dead of the Legion to martyrs of their cause."
   germany.49.a:0 "Let us hope they learned their lesson"
 
   germany.50.t:0 "Decolonizing the Philippines"
