multiple bug fixes

--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -1018,6 +1018,7 @@
   ##########################
   # TOOLTIPS
   ##########################
+  FRA_SP_reshuffle_xavier:0 "The Current SP leader will be replaced with Xavier Vallat"
 
   FRA_remove_ministers:0 "Our ministers will be removed and replaced with new ones"
 
@@ -1056,6 +1057,7 @@
   PB_FRA_unemployment_variable_plus1_tt:0 "Our Unemployment will §Rincrease§! by §Y1%§!"
 
   FRA_Unemployment_Variable_Less_Than_One:0 "Our Unemployment is less than §Y1%§!"
+  FRA_unemployment_not_active:0 "Another Unemployment Decision is §RNOT§! being taken"
 
   FRA_Unit_Leader_Attack:0 "Every §YUnit Leader§! Will Gain One Attack Skill Level"
   FRA_Unit_Leader_Defense:0 "Every §YUnit Leader§! Will Gain One Defense Skill Level"
