--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -359,6 +359,33 @@
   French.69.d:0 ""
   French.69.a:0 "Revenge Has Never Tasted Better"
 
+  French.70.t:0 "The Pacte Revanchiste"
+  French.70.d:0 ""
+  French.70.a:0 "We Have Common Interests"
+
+  French.71.t:0 "Germany At War"
+  French.71.d:0 ""
+  French.71.a:0 "We Have To Help"
+
+  French.72.t:0 "The Imperial Powers"
+  French.72.d:0 ""
+  French.72.a:0 "Just Old Times"
+
+  French.73.t:0 "Dealing With Corsica"
+  French.73.d:0 ""
+  French.73.a:0 "Send A list Of Demands"
+  French.73.b:0 "War Is Preferable"
+
+  French.74.t:0 "France Demands The Return Of Corsica"
+  French.74.d:0 ""
+  French.74.a:0 "France Bickers Once Again"
+  French.74.b:0 "We Dont Stand A Chance"
+
+  French.75.t:0 "Corsica Refuses"
+  French.75.d:0 ""
+  French.75.a:0 "War It Is"
+  French.75.b:0 "In Time, In Time"
+
   French.1000.t:0 "French Diplomatic Outreach"
   French.1000.d:0 "The French are approaching us for an alliance"
   French.1000.a:0 "We agree"
@@ -1071,7 +1098,7 @@
   PB_FRA_Collaborator_Charles_de_Gaulle_tt:0 "Charles de Gaulle will be placed as the §YRoyaume Dictent§! of Cornwall"
   PB_FRA_HAN_SP:0 "The §YSP§! will be very pleased with this arrangement"
   PB_FRA_HAN_MIL:0 "The §YMilitary§! will be very pleased with this arrangement"
-  PB_FRA_Greater_France_tt:0 "§YGreater France§! will be formed. What type of formable you get will depend on your political situation\n\n§OThis is the end of the French focus tree§!"
+  PB_FRA_Greater_France_tt:0 "\n§RUnavailable At Current Release:§!\nDepending on your victory circumstances a new focus tree will load"
 
   FRA_not_a_decision:0 "This is not a decision"
   FRA_control_england:0 "Collaborator England controls a piece of England"
@@ -1095,6 +1122,10 @@
   FRA_CON_SYSTEM:0 "\nEvery country that is a puppet of France or in an alliance with them will get the §YContinental System§! national spirit"
   FRA_NORTH_GARRISON:0 "The Northern Border Garrison Will Be Mobilized"
   FRA_South_GARRISON:0 "The Southern Border Garrison Will Be Mobilized"
+
+  FRA_Navy_Attack_tt:0 "Every §YNavy Leader§! Will Gain One Attack Skill"
+  FRA_Navy_Defense_tt:0 "Every §YNavy Leader§! Will Gain One Defense Skill"
+  FRA_Navy_Planning_tt:0 "Every §YNavy Leader§! Will Gain One Planning Skill"
 
   ##########################
   # FRENCH COLLABORATION IN GERMANY
