--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -386,6 +386,20 @@
   French.75.a:0 "War It Is"
   French.75.b:0 "In Time, In Time"
 
+  French.76.t:0 "The Apurdi Situation"
+  French.76.d:0 ""
+  French.76.a:0 "The Time For Peace Has Ended"
+  French.76.b:0 "Send The Demands"
+
+  French.77.t:0 "Demands From France"
+  French.77.d:0 ""
+  French.77.a:0 "We Don't Have A Choice"
+  French.77.b:0 "We Will Stay And Fight"
+
+  French.78.t:0 "Basque Refuses"
+  French.78.d:0 ""
+  French.78.a:0 "War It Is"
+
   French.1000.t:0 "French Diplomatic Outreach"
   French.1000.d:0 "The French are approaching us for an alliance"
   French.1000.a:0 "We agree"
@@ -907,7 +921,7 @@
   PB_FRA_Germania_Enslaved:0 "Germania Enslaved" 
   PB_FRA_Just_A_Piece:0 "Just A Piece"
   PB_FRA_The_Whole_Damn_Thing:0 "The Whole Damn Thing"
-  PB_FRA_And_Sardinia_To:0 "And Sardinia To"
+  PB_FRA_And_Sardinia_To:0 "And Sardinia Too"
   PB_FRA_All_We_Want_Is_Your_Factories:0 "All We Want Is Your Factories"
   PB_FRA_Give_Them_Libya:0 "Give Them Libya"
   PB_FRA_Give_Them_Dalmatia:0 "Give Them Dalmatia"
