revolution event and some more loc grind for the new 34 conference

--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -336,10 +336,13 @@
   PB_ENG_Debate_Military_Policy_desc:0 "The British Empire is the mightiest military force ever seen in human history, however many in Imperial Command are split between unifying the different dominion militaries into one single Imperial entity or giving each dominion autonomy in their military affairs. The 1934 congress will put this military split to rest."
 
   PB_ENG_Focus_on_North_America:0 "Our Wayward Sons in America"
+  PB_ENG_Focus_on_North_America_desc:0 "The Commonwealth and her sister colonies in North America have been our most oldest colonies and apart from the Washington rebellion; they have been our most loyal. It therefore comes to no surprise how the American people see Britain as their great white mother from across the pond and like any doting parent we shall set our eyes to American affairs to protect our wayward sons in America."
 
   PB_ENG_Focus_on_Africa:0 "Our Loyal Subjects in the Dark Continent"
+  PB_ENG_Focus_on_Africa_desc:0 "Africa, the dark continent to many in the Empire however possibly our most lucrative opportunity. Africa is filled with riches and minerals which can fund the Empire into a new age of imperial dominance yet they sit there untouched. Our African domain is also one of our largest providing plenty of lands for white settlers which can be a new loyal subject for Britain. All that we must do is keep our most loyal subjects and alliances in Africa with the natives in line."
 
   PB_ENG_Focus_on_Asia:0 "Our Committment to the Far East"
+  PB_ENG_Focus_on_Asia_desc:0 "Britain was founded on the sugars and spice of the orient. From the establishment of Singapore to our business interests in India and China we have always had a presence in Asia. However as our coffers wain and new powers seek to take our most precious jewels in the East we must change our sizeable presence in Asia to one of commitment of civilisation and imperialism for the sake of Asia of course."
 
   PB_ENG_King_Death:0 "The Death of the King"
   PB_ENG_King_Death_desc:0 "After suffering illness after illness, King George V slept peacefully at midnight, and with it, a new dawn shall arise. Eventually, King Edward VIII shall assume the throne, although the future of the empire remains uncertain, as our nation is facing a paradigm shift never before seen in the British Isles."
@@ -906,7 +909,7 @@
   britain.33.a:0 "Keep calm your Majesty!"
 
   britain.34.t:0 "The British Revolution"
-  britain.34.d:0 ""
+  britain.34.d:0 "Edward looked out his window at the palace. He knew what was coming. This morning; the people of Britain threw all they had against the system which Edward had so carefully built to protect them and that system had faltered. Now as the alliance of socialists and liberals beared down to the palace to demand his Head all he could do was stare and watch into the London sky.\n\nAs the crowds tore through the guards who gave no resitance at Buckingham palace; his most gracious majesty King Edward came out and offered his abdication. To the cheering crowds it was like the sound of heaven which came out the young King's mouth. To Edward it was shame. The King only had one feeling left in him. Fear. For he knew the witch trial to come would have him burnt."
   britain.34.a:0 "Play the man, Master Ridley..."
 
   britain.35.t:0 "The Future of British Government"
