Dynamic Modifier and some focus changes for Russia

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -38,7 +38,8 @@
   PB_RUS_the_plotting_scoundrels_desc:0 ""
   PB_RUS_revenge_for_the_fallen:0 "Revenge for the Fallen"
   PB_RUS_revenge_for_the_fallen_desc:0 ""
-
+  RUS_church_modifier:0 "The State of Church Policy"
+  RUS_church_modifier_desc:0 ""
   ## Ideas For The Russian Collapse ##
 
   PB_RUS_Volga_Germany:0 "Volga Germany"
@@ -321,7 +322,14 @@
   RUS_alexei_and_kirill_ten_tt:0 "§GAlexei§!  and  §gKirill's§!  influence will grow by 10."
   RUS_alexei_decrease_tt:0 "§GAlexei's§!  influence will decrease by 5."
   RUS_alexandra_and_kirill_five_tt:0 "§OAlexandra§!  and  §gKirill's§!  influence will grow by 5."
-  RUS_kirill_twenty_tt:0 "§gKirill's§!  influence will grow by 20."  
+  RUS_kirill_twenty_tt:0 "§gKirill's§!  influence will grow by 20."
+  RUS_religion_intro_tt:0 "§YYou will receive a national spirit which will change based on your choices in church policy§!."
+  RUS_religion_1_tt:0 "§GYour daily political power will increase by 0.15§! and §Ryour weekly stability will decrease by 0.05%§!."
+  RUS_religion_2_tt:0 "§RYour daily political power will decrease by 0.15§! and §Gyour weekly stability will increase by 0.05%§!."
+  RUS_religion_3_tt:0 "§GYour daily political power will increase by 0.15§! and §Ryour weekly war support will decrease by 0.05%§!."
+  RUS_religion_4_tt:0 "§RYour daily political power will decrease by 0.15§! and §Gyour weekly war support increase by 0.05%§!."
+  RUS_religion_5_tt:0 "§GYour recruitment factor and surrender limit will increase by 15%§! and §Ryour improve relations ability will decrease by -15%§!."
+  RUS_religion_6_tt:0 "§RYour recruitment factor will lower by 15%, your surrender limit by 5§!, and §Gyour improve relations ability will increase by 30%§!."  
   ##########################
   # Party Loyalty Mechanic n shit
   ##########################
