--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -12,7 +12,7 @@
   ##########################
   # TOP BAR
   ##########################
-  FRA_Country_Desc_Topbar:0 "§YFeatures:§!\n    - Conquer Europe and proclaim a new hegemony\n    - The largest tree in Pax Britannica with over 275 focuses\n    - Balance the needs of the Military and SP\n    - Industrialize France's major cities into metropolises\n    - Direct the Pacte Revanchiste towards your ideal Europe\n\n§YSituation:§!\nThe Republic of France is a resurgent continental power in Europe in 1933.\n\n§YLore:§!\nFrance's history is deeply entangled with Europe's history. The liberal constitutionalist reformation followed the §YCrisis of 1798§!, birthing one of Europe's earliest truly parliamentary monarchies. The §YBourbon Dynasty§! once reigned from the shores of Iberia to the swamps of Venezia and beyond, and in their hubris thought to bring down the rising power of Germany. This fatal mistake would ultimately cost the Bourbons their crown, their empire, and lead to the deaths of nearly twenty million people. \n\n §YThe Great War§! ended with the German tricolor flying triumphant over Paris. The humiliating §YTreaty of Tours§! saw the French Empire dismantled, the monarchy formally ended, and a near total demilitarization. Naturally, this so-called Twenty Year Armistice sent France into a sprial of revanchist fervor. In the decades since the end of the war, French politics have become dominated by two main political factions; §YAction Française§! and the §YFrench Popular Front§!. \n\n The former, lead by §YCharles Maurras§!, is a restorationist pro-monarchy party. Technically rendered illegal under the post-war constitution, Maurras' extreme nationalist and Catholic stance have garnered enough support to earn him influence on the National Assembly. The Popular Front, headed by §YJacques Doriot§!, is an ultranationalist authoritarian party seeking revenge against Germany and Britain for their part in the Great War. Forced into a coalition to keep power away from more moderate voices, Doriot and Maurras have begun to increasingly undermine one another in a cynical game for total control. With the left-wing of the Popular Front under §YInessa Armand§! beginning to question Doriot's control, the political scene in France is likely to lead to bloodshed. Regardless of who wins, it seems that the anger of the French people will soon turn East to the moribund German Empire and beyond.\n\n The §YThe Republic of France§! is a §YGreat Power§!"
+  FRA_Country_Desc_Topbar:0 "§YFeatures:§!\n    - Conquer Europe and proclaim a new hegemony\n    - The largest tree in Pax Britannica with over 298 focuses\n    - Balance the needs of the Military and SP\n    - Industrialize France's major cities into metropolises\n    - Direct the Pacte Revanchiste towards your ideal Europe\n\n§YSituation:§!\nThe Republic of France is a resurgent continental power in Europe in 1933.\n\n§YLore:§!\nFrance's history is deeply entangled with Europe's history. The liberal constitutionalist reformation followed the §YCrisis of 1798§!, birthing one of Europe's earliest truly parliamentary monarchies. The §YBourbon Dynasty§! once reigned from the shores of Iberia to the swamps of Venezia and beyond, and in their hubris thought to bring down the rising power of Germany. This fatal mistake would ultimately cost the Bourbons their crown, their empire, and lead to the deaths of nearly twenty million people. \n\n §YThe Great War§! ended with the German tricolor flying triumphant over Paris. The humiliating §YTreaty of Tours§! saw the French Empire dismantled, the monarchy formally ended, and a near total demilitarization. Naturally, this so-called Twenty Year Armistice sent France into a sprial of revanchist fervor. In the decades since the end of the war, French politics have become dominated by two main political factions; §YAction Française§! and the §YFrench Popular Front§!. \n\n The former, lead by §YCharles Maurras§!, is a restorationist pro-monarchy party. Technically rendered illegal under the post-war constitution, Maurras' extreme nationalist and Catholic stance have garnered enough support to earn him influence on the National Assembly. The Popular Front, headed by §YJacques Doriot§!, is an ultranationalist authoritarian party seeking revenge against Germany and Britain for their part in the Great War. Forced into a coalition to keep power away from more moderate voices, Doriot and Maurras have begun to increasingly undermine one another in a cynical game for total control. With the left-wing of the Popular Front under §YInessa Armand§! beginning to question Doriot's control, the political scene in France is likely to lead to bloodshed. Regardless of who wins, it seems that the anger of the French people will soon turn East to the moribund German Empire and beyond.\n\n The §YThe Republic of France§! is a §YGreat Power§!"
 
   ##########################
   # MINISTERS
@@ -602,6 +602,13 @@
   FRA_Institute_For_Technological_Progress4:0 "Institute For Technological Progress"
   FRA_Rocket_Sites:0 "V2 Investments"
 
+  FRA_The_End_Of_Time:0 "The End Of Time"
+  FRA_The_End_Of_Time_2:0 "The End Of Time"
+  FRA_The_End_Of_Time_3:0 "The End Of Time"
+  FRA_The_End_Of_Time_4:0 "The End Of Time"
+  FRA_The_End_Of_Time_5:0 "The End Of Time"
+  FRA_The_End_Of_Time_6:0 "The End Of Time"
+
   ##########################
   # FOCUS
   ##########################
@@ -959,11 +966,26 @@
 
   PB_FRA_The_State_That_Gives:0 "The State That Gives"
 
-  PB_FRA_Continental_Expansion_Spain:0 "Expansion continentale: §YIberia§!"
-  PB_FRA_Continental_Expansion_Balkans:0 "Expansion continentale: §YBalkans§!"
-  PB_FRA_Continental_Expansion_Russia:0 "Expansion continentale: §YEastern Europe§!"
-  PB_FRA_Continental_Expansion_Italy:0 "Expansion continentale: §YItaly§!"
-  PB_FRA_Continental_Expansion_Scandi:0 "Expansion continentale: §YScandinavia§!"
+  PB_FRA_The_End_Of_Time:0 "The End Of Time"
+  PB_FRA_Scrap_Campaigns:0 "Scrap Campaigns"
+  PB_FRA_Mobile_Factories:0 "Mobile Factories"
+  PB_FRA_Sacrifices_Must_Be_Made:0 "Sacrifices Must Be Made"
+  PB_FRA_Loot_The_Museums:0 "Loot The Museums" 
+  PB_FRA_Scorched_Earth_Tactics:0 "Scorched Earth Tactics"
+  PB_FRA_Mobolize_The_Militias:0 "Mobolize The Militias"
+  PB_FRA_Child_Soliders:0 "Child Soliders"
+  PB_FRA_Cutting_Corners:0 "Cutting Corners" 
+  PB_FRA_Do_Or_Die:0 "Do Or Die"
+  PB_FRA_Green_Clouds_Over_France:0 "Green Clouds Over France"
+  PB_FRA_Foreign_Forces:0 "Foreign Forces"
+  PB_FRA_Emergency_Fortifications:0 "Emergency Fortifications"
+  PB_FRA_Super_Weapon_Theories:0 "Super Weapon Theories" 
+  PB_FRA_Mythical_Stories:0 "Mythical Stories"
+  PB_FRA_Sons_Of_Charlemagne:0 "Sons Of Charlemagne"
+  PB_FRA_Do_It_For_France:0 "Do It For France"
+  PB_FRA_Hold_The_Line:0 "Hold The Line"
+  PB_FRA_Not_One_Step_Back:0 "Not One Step Back"
+  PB_FRA_Redout_Plan_Piedmont:0 "Redout Plan: §RPiedmont§!"
 
   ##########################
   # FRENCH DECISIONS
@@ -1155,6 +1177,9 @@
   FRA_Navy_Attack_tt:0 "Every §YNavy Leader§! Will Gain One Attack Skill"
   FRA_Navy_Defense_tt:0 "Every §YNavy Leader§! Will Gain One Defense Skill"
   FRA_Navy_Planning_tt:0 "Every §YNavy Leader§! Will Gain One Planning Skill"
+
+  FRA_Post_War_Terrorists_tt:0 "\nPost-War France will be hell for any foreign administration. §YPlan Osiris§! will guarentee that French Neo-Imperialism lives on long after we are defeated. Terrorist cells will be set up in major cities and a long war of §Rinternal attrition§! will begin. Completing various focuses throughout this tree will increase the §Rdebuffs§! any new administration gets. "
+  FRA_Post_War_Terrorists_Idea_Increase_tt:0 "\nThe Effects of §YPlan Osiris§! will Increase"
 
   ##########################
   # FRENCH COLLABORATION IN GERMANY
