--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -53,7 +53,136 @@
   ##########################
   # EVENTS
   ##########################
-
+  RUS.1.t:0 ""
+  RUS.1.d:0 ""
+  RUS.1.a:0 ""
+  RUS.1.b:0 ""
+  RUS.2.t:0 ""
+  RUS.2.d:0 ""
+  RUS.2.a:0 ""
+  RUS.3.t:0 ""
+  RUS.3.d:0 ""
+  RUS.3.a:0 ""
+  RUS.4.t:0 ""
+  RUS.4.d:0 ""
+  RUS.4.a:0 ""
+  RUS.5.t:0 ""
+  RUS.5.d:0 ""
+  RUS.5.a:0 ""
+  RUS.6.t:0 ""
+  RUS.6.d:0 ""
+  RUS.6.a:0 ""
+  RUS.7.t:0 ""
+  RUS.7.d:0 ""
+  RUS.7.a:0 ""
+  RUS.8.t:0 ""
+  RUS.8.d:0 ""
+  RUS.8.a:0 ""
+  RUS.9.t:0 ""
+  RUS.9.d:0 ""
+  RUS.9.a:0 ""
+  RUS.10.t:0 ""
+  RUS.10.d:0 ""
+  RUS.10.a:0 ""
+  RUS.10.b:0 ""
+  RUS.10.c:0 ""
+  RUS.11.t:0 ""
+  RUS.11.d:0 ""
+  RUS.11.a:0 ""
+  RUS.12.t:0 ""
+  RUS.12.d:0 ""
+  RUS.12.a:0 ""
+  RUS.13.t:0 ""
+  RUS.13.d:0 ""
+  RUS.13.a:0 ""
+  RUS.14.t:0 ""
+  RUS.14.d:0 ""
+  RUS.14.a:0 ""
+  RUS.15.t:0 ""
+  RUS.15.d:0 ""
+  RUS.15.a:0 ""
+  RUS.15.b:0 ""
+  RUS.16.t:0 ""
+  RUS.16.d:0 ""
+  RUS.16.a:0 ""
+  RUS.17.t:0 "" 
+  RUS.17.d:0 ""
+  RUS.17.a:0 ""
+  RUS.18.t:0 ""
+  RUS.18.d:0 ""
+  RUS.18.a:0 ""
+  RUS.19.t:0 ""
+  RUS.19.d:0 "" 
+  RUS.19.a:0 ""
+  RUS.20.t:0 ""
+  RUS.20.d:0 ""
+  RUS.20.a:0 ""
+  RUS.21.t:0 ""
+  RUS.21.d:0 ""
+  RUS.21.a:0 ""
+  RUS.22.t:0 ""
+  RUS.22.d:0 ""
+  RUS.22.a:0 ""
+  RUS.23.t:0 ""
+  RUS.23.d:0 "" 
+  RUS.23.a:0 ""
+  RUS.24.t:0 ""
+  RUS.24.d:0 ""
+  RUS.24.a:0 ""
+  RUS.25.t:0 ""
+  RUS.25.d:0 ""
+  RUS.25.a:0 ""
+  RUS.26.t:0 ""
+  RUS.26.d:0 ""
+  RUS.26.a:0 ""
+  RUS.26.b:0 ""
+  RUS.26.c:0 "" 
+  RUS.27.t:0 ""
+  RUS.27.d:0 ""
+  RUS.27.a:0 ""
+  RUS.27.b:0 ""
+  RUS.28.t:0 ""
+  RUS.28.d:0 ""
+  RUS.28.a:0 ""
+  RUS.28.b:0 ""
+  RUS.29.t:0 ""
+  RUS.29.d:0 ""
+  RUS.29.a:0 ""
+  RUS.29.b:0 ""
+  RUS.29.c:0 ""
+  RUS.30.t:0 ""
+  RUS.30.d:0 ""
+  RUS.30.a:0 ""
+  RUS.30.b:0 ""
+  RUS.31.t:0 "" 
+  RUS.31.d:0 ""
+  RUS.31.a:0 ""
+  RUS.32.t:0 ""
+  RUS.32.d:0 ""
+  RUS.32.a:0 ""
+  RUS.33.t:0 ""
+  RUS.33.d:0 ""
+  RUS.33.a:0 ""
+  RUS.34.t:0 ""
+  RUS.34.d:0 ""
+  RUS.34.a:0 ""
+  RUS.35.t:0 ""
+  RUS.35.d:0 ""
+  RUS.35.a:0 ""
+  RUS.36.t:0 ""
+  RUS.36.d:0 ""
+  RUS.36.a:0 ""
+  RUS.37.t:0 ""
+  RUS.37.d:0 ""
+  RUS.37.a:0 ""
+  RUS.37.b:0 ""
+  RUS.37.c:0 ""
+  RUS.38.t:0 ""
+  RUS.38.d:0 ""
+  RUS.38.a:0 ""
+  RUS.39.t:0 ""
+  RUS.39.d:0 ""
+  RUS.39.a:0 ""
   ##########################
   # GUI DESCRIPTIONS
   ##########################
