--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -400,6 +400,36 @@
   French.78.d:0 ""
   French.78.a:0 "War It Is"
 
+  French.79.t:0 "A Latin Union"
+  French.79.d:0 ""
+  French.79.a:0 "We Could Try"
+  French.79.b:0 "A Useless Concept"
+
+  French.80.t:0 "France Proposes A Latin Union"
+  French.80.d:0 ""
+  French.80.a:0 "It Is Best That Brothers Unite Against Great Foes"
+  French.80.b:0 "We Rather Not Be Slaves To The French"
+
+  French.81.t:0 "Italy Agrees To A Union"
+  French.81.d:0 ""
+  French.81.a:0 "Wonderful"
+
+  French.82.t:0 "Italy Refuses To Join A Union"
+  French.82.d:0 ""
+  French.82.a:0 "Damn"
+
+  French.83.t:0 "Spain Agrees To Join A Union"
+  French.83.d:0 ""
+  French.83.a:0 "Wonderful"
+
+  French.84.t:0 "Spain Refuses To Join A Union"
+  French.84.d:0 ""
+  French.84.a:0 "Damn"
+
+  French.85.t:0 "A Very Latin Union"
+  French.85.d:0 ""
+  French.85.a:0 "Brothers United"
+
   French.1000.t:0 "French Diplomatic Outreach"
   French.1000.d:0 "The French are approaching us for an alliance"
   French.1000.a:0 "We agree"
@@ -1178,9 +1208,6 @@
   FRA_Navy_Defense_tt:0 "Every §YNavy Leader§! Will Gain One Defense Skill"
   FRA_Navy_Planning_tt:0 "Every §YNavy Leader§! Will Gain One Planning Skill"
 
-  FRA_Post_War_Terrorists_tt:0 "\nPost-War France will be hell for any foreign administration. §YPlan Osiris§! will guarentee that French Neo-Imperialism lives on long after we are defeated. Terrorist cells will be set up in major cities and a long war of §Rinternal attrition§! will begin. Completing various focuses throughout this tree will increase the §Rdebuffs§! any new administration gets. "
-  FRA_Post_War_Terrorists_Idea_Increase_tt:0 "\nThe Effects of §YPlan Osiris§! will Increase"
-
   ##########################
   # FRENCH COLLABORATION IN GERMANY
   ##########################
@@ -1347,3 +1374,28 @@
   SWE_SCANDI_ds_ADJ:0 "Scandinavian"
   SWE_SCANDI_cn_ADJ:0 "Scandinavian"
   SWE_SCANDI_an_ADJ:0 "Scandinavian"
+
+  FRA_Latin_Union_ni:0 "Latin Union"
+  FRA_Latin_Union_ni_DEF:0 "Latin Union"
+  FRA_Latin_Union_ds:0 "Latin Union"
+  FRA_Latin_Union_ds_DEF:0 "Latin Union"
+  FRA_Latin_Union_rc:0 "Latin Union"
+  FRA_Latin_Union_rc_DEF:0 "Latin Union"
+  FRA_Latin_Union_an:0 "Latin Union"
+  FRA_Latin_Union_an_DEF:0 "Latin Union"
+  FRA_Latin_Union_cn:0 "Latin Union"
+  FRA_Latin_Union_cn_DEF:0 "Latin Union"
+  FRA_Latin_Union_lb:0 "Latin Union"
+  FRA_Latin_Union_lb_DEF:0 "Latin Union"
+  FRA_Latin_Union_ss:0 "Latin Union"
+  FRA_Latin_Union_ss_DEF:0 "Latin Union"
+  FRA_Latin_Union_jc:0 "Latin Union"
+  FRA_Latin_Union_jc_DEF:0 "Latin Union"
+  FRA_Latin_Union_ni_ADJ:0 "Latin"
+  FRA_Latin_Union_rc_ADJ:0 "Latin"
+  FRA_Latin_Union_lb_ADJ:0 "Latin"
+  FRA_Latin_Union_ss_ADJ:0 "Latin"
+  FRA_Latin_Union_jc_ADJ:0 "Latin"
+  FRA_Latin_Union_ds_ADJ:0 "Latin"
+  FRA_Latin_Union_cn_ADJ:0 "Latin"
+  FRA_Latin_Union_an_ADJ:0 "Latin"
