Germany Episoded 99: We did too much trolling
- Focus Changes
- Focus Icon Adds
- Localisation
-Events
-EventsGfx
- Ministers

--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -28,6 +28,7 @@
   GER_PB_Joseph_Goebbels:0 "Paul Joseph Goebbels"
 
   GER_PB_Otto_Wels:0 "Otto Wels"
+  GER_PB_Wilhelm_Kulz:0 "Wilhelm Külz"
 
 
   ##########################
@@ -310,7 +311,11 @@
   PB_GER_Europe_Economic_Aid:0 "Rebuilding Europe"
 
   PB_GER_Liberal_Diplomacy:0 "Protecting Germany at all Costs"
+  PB_GER_Hugenberg_Line:0 "The Hugenberg Line"
+  PB_GER_Trust_Mackensen:0 "Trust Mackensen"
+  PB_GER_War_Rationing_Plan:0 "The War Rationing Plan"
 
+  PB_GER_Black_Diplomacy:0 "Our New Destiny"
   PB_GER_Demands_Danish:0 "Threatening the Danish"
   PB_GER_Demands_Danish_desc:0 "Threatening the Danish"
 
@@ -577,9 +582,12 @@
   germany.58.t:0 "The Reactionaries begin their March"
   germany.58.d:0 ""
   germany.58.a:0 "Germany Over All!"
-
-
   
+  germany.59.t:0 "The Voting Begins"
+  germany.59.d:0 ""
+  germany.59.a:0 "Victory for the SB"
+  germany.59.b:0 "Victory for UDP "
+  germany.59.c:0 "Victory for the DV"
 
   ##########################
   # DECISIONS
