--- a/localisation/PB_Parties_l_english.yml
+++ b/localisation/PB_Parties_l_english.yml
@@ -190,10 +190,10 @@
   GER_cn_party_long:0 "Nationaldemokratische Partei"
   GER_an_party:0 "NP - Independents"
   GER_an_party_long:0 "Nationalliberale Partei - Independents Faction"
-  GER_rc_party:0 "Reichslandbund"
-  GER_rc_party_long:0 "Reichslandbund"
-  GER_ds_party:0 "PKE"
-  GER_ds_party_long:0 "Partei der kaiserlichen Einheit"
+  GER_rc_party:0 "DV"
+  GER_rc_party_long:0 "Deutsche Volkspartei"
+  GER_ds_party:0 "PK"
+  GER_ds_party_long:0 "Partei des Kaiserbunds"
   GER_ni_party:0 "NDV"
   GER_ni_party_long:0 "Nationaler Deutscher Volksbund"
 
