--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -354,7 +354,11 @@
 
   PBNews.92.t:0 "Pax Americana Reaches 100 Million Sales"
   PBNews.92.d:0 ""  
-  PBNews.92.a:0 "Since When Did Alternative History Become Profitable"
+  PBNews.92.a:0 "Since When Did Alternative History Become Profitable"^
+
+  PBNews.93.t:0 "Kölner BC 01 Wins German Football Championship"
+  PBNews.93.d:0 "German Football is really the sport of passion and miracles.\nThe German Football Club Kölner Ballspiel-Club 1901 from Cologn was not even of one biggest clubs of their town and were initially just hoping that they would get a chance to win the West German Cup. Suprinsingly they won it and qualified for the German Championship where the strongest teams from all out of Germany would compete for the title. With heart, passion and a lot of sweat the Kölner made it to the Final where they met their neighbouring rival Fortuna Düsseldorf and subsequently won 1:0."
+  PBNews.93.a:0 "A Football Wonder"
 
 
 
