--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -639,6 +639,10 @@
   FRA_The_End_Of_Time_5:0 "The End Of Time"
   FRA_The_End_Of_Time_6:0 "The End Of Time"
 
+  FRA_Child_Soliders:0 "Child Soliders"
+  FRA_Cutting_Corners:0 "Cutting Corners"
+  FRA_Bunker_Initiative:0 "Bunker Initiative"
+
   ##########################
   # FOCUS
   ##########################
@@ -1006,7 +1010,7 @@
   PB_FRA_Child_Soliders:0 "Child Soliders"
   PB_FRA_Cutting_Corners:0 "Cutting Corners" 
   PB_FRA_Do_Or_Die:0 "Do Or Die"
-  PB_FRA_Green_Clouds_Over_France:0 "Green Clouds Over France"
+  PB_FRA_Green_Clouds_Over_France:0 "Drugs And Desperation"
   PB_FRA_Foreign_Forces:0 "Foreign Forces"
   PB_FRA_Emergency_Fortifications:0 "Emergency Fortifications"
   PB_FRA_Super_Weapon_Theories:0 "Super Weapon Theories" 
@@ -1015,7 +1019,7 @@
   PB_FRA_Do_It_For_France:0 "Do It For France"
   PB_FRA_Hold_The_Line:0 "Hold The Line"
   PB_FRA_Not_One_Step_Back:0 "Not One Step Back"
-  PB_FRA_Redout_Plan_Piedmont:0 "Redout Plan: §RPiedmont§!"
+  PB_FRA_Redout_Plan_Piedmont:0 "Redout Plan: §RSavoy§!"
 
   ##########################
   # FRENCH DECISIONS
@@ -1207,6 +1211,9 @@
   FRA_Navy_Attack_tt:0 "Every §YNavy Leader§! Will Gain One Attack Skill"
   FRA_Navy_Defense_tt:0 "Every §YNavy Leader§! Will Gain One Defense Skill"
   FRA_Navy_Planning_tt:0 "Every §YNavy Leader§! Will Gain One Planning Skill"
+
+  FRA_Mobolize_The_Militias_tt:0 "Fifteen §YTempête Populaire§! Divisions Will Be Mobolized Across France"
+  PB_FRA_Foreign_Forces_tt:0 "Three §YTempête Populaire§! Divisions Will Be Mobolized Across France"
 
   ##########################
   # FRENCH COLLABORATION IN GERMANY
