Finish off of the revolution, moving onto new events

--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -913,13 +913,13 @@
   britain.34.a:0 "Play the man, Master Ridley..."
 
   britain.35.t:0 "The Future of British Government"
-  britain.35.d:0 ""
+  britain.35.d:0 "The time has come to decide the fate of the country and the Imperial Federation as a whole. Many are advocating for the establishment of a republic of Great Britain to never allow a 'divine' monarch from seizing power ever again which has been popular amongst the socialists.\n\nHowever many of our middle class brethen wish to establish Prince Albert as the new King bearing his late father's name. This has seen a sizeable debate in the revolution which has already caused fractions to occur between the people of Britain. Maybe a stronger hand is needed to protect Britain in the darkest of hours?"
   britain.35.a:0 "George VI will assume the throne"
   britain.35.b:0 "To hell with the monarchy!"
   britain.35.c:0 "The Military steps in and declares a state of emergency"
 
   britain.36.t:0 "The Integration of Tunisia"
-  britain.36.d:0 ""
+  britain.36.d:0 "Tunisia is a stragetic point in the Mediterranean, a dagger aiming towards Italy which can be used to either supply Malta or plan a large scale invasion of Italy if they ever turn from our grace like they did in the last war. However Tunisia is already part of the Imperial Federation under the guise of a collaborator arab monarchy to the crown. If we do decide to send the offer to intergrate Tunisia into direct British rule may prove difficult to the local rulers wishing to keep independent which may cause war.\n\nWe do have the second option however to keep the nation as it is; a puppet to the crown. The choice is up to the Foreign office."
   britain.36.a:0 "Offer an ultimatum to the Bey"
   britain.36.b:0 "Tunisia should remain as it is."
 
