--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -1,6 +1,22 @@
 ﻿l_english:
 
   ##########################
+  # FACTIONALISM
+  ##########################
+  Factionalism_tt:0 "Our current §OFactionalism§! is [?FRA_Factionalism|%0]"
+  Factionalism_tt_delayed:0 "France's political system is at odds with each other. Calling it a Far-right political union would be a gross understatement of the bribes and corruption that breathe throughout the French state. At all times there is someone, somewhere, with a differing opinion. These individuals must be hunted down until their very extinction.\n\nDepending on your level of Factionalism your stability and political power factors will increase/decrease."
+  FRA_Low_Factionalism:0 "Low Factionalism"
+  FRA_Med_Factionalism:0 "Medium Factionalism" 
+  FRA_High_Factionalism:0 "High Factionalism"
+  FRA_Factionalism_0.02_decrease:0 "Factionalism will decrease by §G-2%§!"
+  FRA_Factionalism_0.05_decrease:0 "Factionalism will decrease by §G-5%§!"
+  FRA_Factionalism_0.08_decrease:0 "Factionalism will decrease by §G-8%§!"
+  FRA_Factionalism_0.02_increase:0 "Factionalism will increase by §R+2%§!"
+  FRA_Factionalism_0.05_increase:0 "Factionalism will increase by §R+5%§!"
+  FRA_Factionalism_0.08_increase:0 "Factionalism will increase by §R+8%§!"
+  PB_Lower_Factionalism:0 "Lower Factionalism"
+
+  ##########################
   # TRAITS
   ##########################
   trait_FRA_MIL_Loyalties:0 "Militarist Loyalties"
@@ -12,7 +28,7 @@
   ##########################
   # TOP BAR
   ##########################
-  FRA_Country_Desc_Topbar:0 "§YFeatures:§!\n    - Conquer Europe and proclaim a new hegemony\n    - The largest tree in Pax Britannica with over 298 focuses\n    - Balance the needs of the Military and SP\n    - Industrialize France's major cities into metropolises\n    - Direct the Pacte Revanchiste towards your ideal Europe\n\n§YSituation:§!\nThe Republic of France is a resurgent continental power in Europe in 1933.\n\n§YLore:§!\nFrance's history is deeply entangled with Europe's history. The liberal constitutionalist reformation followed the §YCrisis of 1798§!, birthing one of Europe's earliest truly parliamentary monarchies. The §YBourbon Dynasty§! once reigned from the shores of Iberia to the swamps of Venezia and beyond, and in their hubris thought to bring down the rising power of Germany. This fatal mistake would ultimately cost the Bourbons their crown, their empire, and lead to the deaths of nearly twenty million people. \n\n §YThe Great War§! ended with the German tricolor flying triumphant over Paris. The humiliating §YTreaty of Tours§! saw the French Empire dismantled, the monarchy formally ended, and a near total demilitarization. Naturally, this so-called Twenty Year Armistice sent France into a sprial of revanchist fervor. In the decades since the end of the war, French politics have become dominated by two main political factions; §YAction Française§! and the §YFrench Popular Front§!. \n\n The former, lead by §YCharles Maurras§!, is a restorationist pro-monarchy party. Technically rendered illegal under the post-war constitution, Maurras' extreme nationalist and Catholic stance have garnered enough support to earn him influence on the National Assembly. The Popular Front, headed by §YJacques Doriot§!, is an ultranationalist authoritarian party seeking revenge against Germany and Britain for their part in the Great War. Forced into a coalition to keep power away from more moderate voices, Doriot and Maurras have begun to increasingly undermine one another in a cynical game for total control. With the left-wing of the Popular Front under §YInessa Armand§! beginning to question Doriot's control, the political scene in France is likely to lead to bloodshed. Regardless of who wins, it seems that the anger of the French people will soon turn East to the moribund German Empire and beyond.\n\n The §YThe Republic of France§! is a §YGreat Power§!"
+  FRA_Country_Desc_Topbar:0 "§YFeatures:§!\n    - Conquer Europe and proclaim a new hegemony\n    - The largest tree in Pax Britannica with over 298 focuses\n    - Balance the needs of the Military and SP\n    - Industrialize France's major cities into metropolises\n    - Direct the Pacte Revanchiste towards your ideal Europe\n    - Balance France's political Factionalism\n    - Deal with the 1930s unemployment crisis\n\n§YSituation:§!\nThe Republic of France is a resurgent continental power in Europe in 1933.\n\n§YLore:§!\nFrance's history is deeply entangled with Europe's history. The liberal constitutionalist reformation followed the §YCrisis of 1798§!, birthing one of Europe's earliest truly parliamentary monarchies. The §YBourbon Dynasty§! once reigned from the shores of Iberia to the swamps of Venezia and beyond, and in their hubris thought to bring down the rising power of Germany. This fatal mistake would ultimately cost the Bourbons their crown, their empire, and lead to the deaths of nearly twenty million people. \n\n §YThe Great War§! ended with the German tricolor flying triumphant over Paris. The humiliating §YTreaty of Tours§! saw the French Empire dismantled, the monarchy formally ended, and a near total demilitarization. Naturally, this so-called Twenty Year Armistice sent France into a sprial of revanchist fervor. In the decades since the end of the war, French politics have become dominated by two main political factions; §YAction Française§! and the §YFrench Popular Front§!. \n\n The former, lead by §YCharles Maurras§!, is a restorationist pro-monarchy party. Technically rendered illegal under the post-war constitution, Maurras' extreme nationalist and Catholic stance have garnered enough support to earn him influence on the National Assembly. The Popular Front, headed by §YJacques Doriot§!, is an ultranationalist authoritarian party seeking revenge against Germany and Britain for their part in the Great War. Forced into a coalition to keep power away from more moderate voices, Doriot and Maurras have begun to increasingly undermine one another in a cynical game for total control. With the left-wing of the Popular Front under §YInessa Armand§! beginning to question Doriot's control, the political scene in France is likely to lead to bloodshed. Regardless of who wins, it seems that the anger of the French people will soon turn East to the moribund German Empire and beyond.\n\n The §YThe Republic of France§! is a §YGreat Power§!"
 
   ##########################
   # MINISTERS
@@ -1059,7 +1075,7 @@
   FRA_SP_Purge_SP:0 "Purge the Sécurité publique"
 
   PB_FRA_Domestic_Policy:0 "The Party Doctrine"
-  PB_FRA_Domestic_Policy_desc:0 "\n\n\n\n\n\nFrance has been united under the banner of the Popular Party since the death of Marcel Deat in 1929. Though their most extreme proposals have been constrained by the coalition with the Restorationists, there are many policies that must be established and things that must be managed by the government in order to maintain support.\n\nDecisions highlighted in §YYellow§! are recurring and will become available again after a period of time has passed.\n\nDecisions highlighted in §GGreen§! represent foreign policy decisions."
+  PB_FRA_Domestic_Policy_desc:0 "\n\n\n\n\n\nFrance has been united under the banner of the Popular Party since the death of Marcel Deat in 1929. Though their most extreme proposals have been constrained by the coalition with the Restorationists, there are many policies that must be established and things that must be managed by the government in order to maintain support."
   PB_Stage_Rally:0 "§YStage Political Rallies§!"
   PB_Promote_National_Youth:0 "§YPromote the National Youth Pioneers§!"
   PB_Promote_Political_Violence:0 "§YPromote Political Violence§!"
