some france stuff

--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -360,7 +360,29 @@
   PBNews.93.d:0 "German Football is really the sport of passion and miracles.\nThe German Football Club Kölner Ballspiel-Club 1901 from Cologn was not even of one biggest clubs of their town and were initially just hoping that they would get a chance to win the West German Cup. Suprinsingly they won it and qualified for the German Championship where the strongest teams from all out of Germany would compete for the title. With heart, passion and a lot of sweat the Kölner made it to the Final where they met their neighbouring rival Fortuna Düsseldorf and subsequently won 1:0."
   PBNews.93.a:0 "A Football Wonder"
 
+  PBNews.94.t:0 "WALLONIA PROTECTED, FRANCE STILL BITES"
+  PBNews.94.d:0 ""
+  PBNews.94.a:0 "My God it has begun"
 
+  PBNews.95.t:0 "WALLONIA PROTECTED, FRANCE BENDS"
+  PBNews.95.d:0 ""
+  PBNews.95.a:0 "How much longer can Europe last?"
+
+  PBNews.96.t:0 "DIETLAND PROTECTED, FRANCE STRIKES"
+  PBNews.96.d:0 ""
+  PBNews.96.a:0 "Have we reached the French end game?"
+
+  PBNews.97.t:0 "DIETLAND PROTECTED, FRANCE BENDS"
+  PBNews.97.d:0 ""
+  PBNews.97.a:0 "France has been tamed"
+
+  PBNews.98.t:0 "DIETLAND SAVED, COMPROMISE ACCEPTED"
+  PBNews.98.d:0 ""
+  PBNews.98.a:0 "Has their lust calmed?"
+
+  PBNews.99.t:0 "DIETLAND ADRIFT"
+  PBNews.99.d:0 ""
+  PBNews.99.a:0 "Germany has left Dietland to die"
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
