--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -519,6 +519,30 @@
   French_flavour.16.d:0 ""
   French_flavour.16.a:0 "We Don't Need Foreigners"
 
+  French_flavour.17.t:0 "The Promised Island Of Napoleon"
+  French_flavour.17.d:0 ""
+  French_flavour.17.a:0 "Traitors In Exile"
+
+  French_flavour.18.t:0 "The Pride Of France"
+  French_flavour.18.d:0 ""
+  French_flavour.18.a:0 "And They Question Our Methods"
+
+  French_flavour.19.t:0 "Suspicious Citizen Number: 8012234"
+  French_flavour.19.d:0 ""
+  French_flavour.19.a:0 "Find Them, Now!"
+
+  French_flavour.20.t:0 "Connecting France"
+  French_flavour.20.d:0 ""
+  French_flavour.20.a:0 "Paris Shall Become The New Rome"
+
+  French_flavour.21.t:0 "The Beauty Of Innocence"
+  French_flavour.21.d:0 ""
+  French_flavour.21.a:0 "You Look Like One Of Them Though"
+
+  French_flavour.22.t:0 "The Only News Is State News"
+  French_flavour.22.d:0 ""
+  French_flavour.22.a:0 "Lets Have A Read"
+
   French_flavour.31.t:0 "The Italian Civil War"
   French_flavour.31.d:0 "Each cold breathe the minister gave between words only emphasized the unfortunate reality of the war. It was as if each breathe was a desperate please for assistance, directed to the garrison head near the upper savoy border for help, of any kind. The disciples of the ISRF would hang for crimes against the state if they were too loose the war and both the garrison head and minister knew this, though one was clearly on the short end of the stick. He didn't beg twice, his eyes did all the talking, and the message was very clear. The garrsion head lent back in his rickety chair and pondered for a moment."
   French_flavour.31.a:0 "Fine, Send Them More Guns"
